--- a/Zajęcia1_Todos/Views/Todos/Create.cshtml
+++ b/Zajęcia1_Todos/Views/Todos/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Zajęcia1_Todos.Models.Todo
+﻿@model Zajęcia1_Todos.Models.CreateTodoViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -16,6 +16,11 @@
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ForDay" class="control-label"></label>
+                <input asp-for="ForDay" class="form-control" type="date" />
+                <span asp-validation-for="ForDay" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
