--- a/Zajęcia1_Todos/Views/Todos/_TodoItem.cshtml
+++ b/Zajęcia1_Todos/Views/Todos/_TodoItem.cshtml
@@ -6,9 +6,13 @@
 	</td>
 	<td>
 		@Html.DisplayFor(modelItem => modelItem.IsDone)
-		@Html.DisplayFor(modelItem => modelItem.IsDone)
 	</td>
 	<td>
+		<form asp-action="SetDone">
+			<input type="hidden" asp-for="Id" />
+			<input class="btn btn-primary rounded-pill px3" type="submit" value="Finish" />
+		</form>
+
 		<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
 		<a asp-action="Details" asp-route-id="@Model.Id">Details</a> |
 		<a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
